<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="titleText">My Nanodegree Apps!</string>
    <string name="btn1">POPULAR MOVIES</string>
    <string name="btn2">STOCK HAWK</string>
    <string name="btn3">BUILD IT BIGGER</string>
    <string name="btn4">MAKE YOUR APP MATERIAL</string>
    <string name="btn5">GO UBIQUITOUS</string>
    <string name="btn6">CAPSTONE</string>
</resources>
